--- a/templates/home.html
+++ b/templates/home.html
@@ -7,16 +7,16 @@
   <div class="home-subContainer">
     <h1>Who's JobCentric for?</h1>
     <p>
-      JobCentric is built for both Employeers, and users looking for employment oppurtunities. JobCentric does all the
-      heavy lifting on both ends, keeping users updated on a Job Listing or Application.
+      JobCentric is built for both employers and job seekers. JobCentric does all the
+      heavy lifting on both ends, keeping users updated on a job listing or application.
     </p>
   </div>
   <div class="home-subContainer">
     <h1>Why should I use JobCentric</h1>
     <h5>
       JobCentric is built on one foundational principal - no person filling out a job application or an employeer
-      deserves to get ghosted. With a system built in place to both manage and track the status of Job listings,
-      Applications, and other key parts that play a role in hiring/applying, JobCentric can make applying to jobs a
+      deserves to feel unsure in where they stand. With a system built in place to both manage and track the status of job listings,
+      applications, and other key parts that play a role in hiring/applying, JobCentric can make applying to jobs a
       little less stressful.
     </h5>
   </div>
